# cinch-example

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  REAMDE.md
app/: CMakeLists.txt  app.cc
config/: documentation.cmake  packages.cmake  project.cmake
doc/: doxygen.conf.in
simple/data/: CMakeLists.txt
simple/grid/: gpart.md
simple/util/: times_two.cc  upart.tex
src/: CMakeLists.txt
src/app/: app.cc
src/data/: CMakeLists.txt  data.mkd  dpart.h
src/grid/: CMakeLists.txt  gpart.h  gpart.md
src/util/: CMakeLists.txt  upart.cc  upart.h  upart.md  upart.tex
